--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 Django==5.1.4
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
@@ -26,6 +27,7 @@ pydantic==2.10.3
 pydantic_core==2.27.1
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
